Project summary and new features. -Fixed overflow for max-heigth 950px

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@ body {
   overflow: hidden;
 }
 
+@media screen and (max-height: 950px)  {
+    body {
+        overflow: auto;
+    }
+}
+
 h1, h2, h3, h4, h5, h6, p {
     margin: 0;
     padding: 0;
